tests/fixtures/valid_programs/structs_classes.cryo
namespace Main;

import IO from <io/stdio>;
import <core/types>;

type struct Point {
    x: int;
    y: int;
    
    Point(_x: int, _y: int);
    ~Point() default;
    move(dx: int, dy: int) -> void;
}

implement struct Point {
    Point(_x: int, _y: int) {
        this.x = _x;
        this.y = _y;
    }

    move(dx: int, dy: int) -> void {
        this.x = this.x + dx;
        this.y = this.y + dy;
    }
}

type class Circle {
public:
    center: float;
    radius: float;

    Circle(center: float, radius: float) {
        this.center = center;
        this.radius = radius;
    }

    ~Circle() default;

    area() -> float {
        return 3.14 * this.radius * this.radius;
    }
}

function test_struct() -> void {
    const p: Point = new Point(10, 20);
    const x_coord: int = p.x;
    const y_coord: int = p.y;
    return;
}

function test_class() -> void {
    const c: Circle = new Circle(0.0, 5.0);
    const area: float = c.area();
    return;
}

function main() -> int {
    test_struct();
    test_class();
    return 0;
}