tests/fixtures/invalid_programs/private_member_access.cryo
namespace Main;

type struct Point {
    x: int;
    y: int;
}

// This should fail: Accessing private member from outside class
type class BankAccount {
private:
    balance: float;
    
public:
    BankAccount(initial: float) {
        this.balance = initial;
    }
}

function test_private_access_violation() -> int {
    const account: BankAccount = BankAccount(100.0);
    const balance: float = account.balance;  // Should fail - balance is private
    return int(balance);
}